updated background photo to fixed so that it covers while dropdown menu is open

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,6 +17,7 @@ body {
   background-image: url(../img/FITish-background.jpg);
   background-size: cover;
   background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 nav {
